re-ordered ng-if to be at beginngin of tag for dashboard.html made dashboard panels hidden if not in view, should fix pages getting split on mobile devices when keyboard comes out updated dashboardCtrl first load for addons, needed to set room_addons before calling change room

--- a/css/app.css
+++ b/css/app.css
@@ -508,6 +508,13 @@ img.infoType { height:30px; }
 	width: 100%;
 }
 
+#dashboardMask > span {
+	display:none;
+}
+#dashboardMask > span.selected {
+	display:block !important;
+}
+
 .dashboardPage {
 	width:100%;
 	height:100%;
